@@ -9,6 +9,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.List;
+import java.util.Objects;
 
 public final class Tools {
 
@@ -21,43 +22,17 @@ public final class Tools {
             // javaArgList.add("-Dcacio.font.fontmanager=net.java.openjdk.cacio.ctc.CTCFontManager");
             javaArgList.add("-Dcacio.font.fontscaler=sun.font.FreetypeFontScaler");
             javaArgList.add("-Dswing.defaultlaf=javax.swing.plaf.metal.MetalLookAndFeel");
-            if (isJava8) {
-                javaArgList.add("-Dcacio.font.fontmanager=sun.awt.X11FontManager");
-                javaArgList.add("-Dawt.toolkit=net.java.openjdk.cacio.ctc.CTCToolkit");
-                javaArgList.add("-Djava.awt.graphicsenv=net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment");
-            } else {
-                javaArgList.add("-Dcacio.font.fontmanager=com.github.caciocavallosilano.cacio.ctc.CTCFontManager");
-                javaArgList.add("-Dawt.toolkit=com.github.caciocavallosilano.cacio.ctc.CTCToolkit");
-                javaArgList.add("-Djava.awt.graphicsenv=com.github.caciocavallosilano.cacio.ctc.CTCGraphicsEnvironment");
-                javaArgList.add("-Djava.system.class.loader=com.github.caciocavallosilano.cacio.ctc.CTCPreloadClassLoader");
-
-                javaArgList.add("--add-exports=java.desktop/java.awt=ALL-UNNAMED");
-                javaArgList.add("--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED");
-                javaArgList.add("--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED");
-                javaArgList.add("--add-exports=java.desktop/sun.java2d=ALL-UNNAMED");
-                javaArgList.add("--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED");
-                javaArgList.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED");
-                javaArgList.add("--add-exports=java.desktop/sun.awt.event=ALL-UNNAMED");
-                javaArgList.add("--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED");
-                javaArgList.add("--add-exports=java.desktop/sun.font=ALL-UNNAMED");
-                javaArgList.add("--add-exports=java.base/sun.security.action=ALL-UNNAMED");
-                javaArgList.add("--add-opens=java.base/java.util=ALL-UNNAMED");
-                javaArgList.add("--add-opens=java.desktop/java.awt=ALL-UNNAMED");
-                javaArgList.add("--add-opens=java.desktop/sun.font=ALL-UNNAMED");
-                javaArgList.add("--add-opens=java.desktop/sun.java2d=ALL-UNNAMED");
-                javaArgList.add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED");
-
-                // Opens the java.net package to Arc DNS injector on Java 9+
-                javaArgList.add("--add-opens=java.base/java.net=ALL-UNNAMED");
-            }
+            javaArgList.add("-Dcacio.font.fontmanager=sun.awt.X11FontManager");
+            javaArgList.add("-Dawt.toolkit=net.java.openjdk.cacio.ctc.CTCToolkit");
+            javaArgList.add("-Djava.awt.graphicsenv=net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment");
 
             StringBuilder cacioClasspath = new StringBuilder();
-            cacioClasspath.append("-Xbootclasspath/" + (isJava8 ? "p" : "a"));
-            File cacioDir = new File(context.getDir("runtime", 0).getAbsolutePath() + "/caciocavallo" + (isJava8 ? "" : "17"));
+            cacioClasspath.append("-Xbootclasspath/" + "p");
+            File cacioDir = new File(context.getDir("runtime", 0).getAbsolutePath() + "/caciocavallo" + "");
             if (cacioDir.exists() && cacioDir.isDirectory()) {
-                for (File file : cacioDir.listFiles()) {
+                for (File file : Objects.requireNonNull(cacioDir.listFiles())) {
                     if (file.getName().endsWith(".jar")) {
-                        cacioClasspath.append(":" + file.getAbsolutePath());
+                        cacioClasspath.append(":").append(file.getAbsolutePath());
                     }
                 }
             }
@@ -66,13 +41,13 @@ public final class Tools {
     }
 
     public static String read(InputStream is) throws IOException {
-        String out = "";
+        StringBuilder out = new StringBuilder();
         int len;
         byte[] buf = new byte[512];
         while ((len = is.read(buf)) != -1) {
-            out += new String(buf, 0, len);
+            out.append(new String(buf, 0, len));
         }
-        return out;
+        return out.toString();
     }
 
     public static String read(String path) throws IOException {
@@ -81,7 +56,7 @@ public final class Tools {
 
     public static void write(String path, byte[] content) throws IOException {
         File outPath = new File(path);
-        outPath.getParentFile().mkdirs();
+        Objects.requireNonNull(outPath.getParentFile()).mkdirs();
         outPath.createNewFile();
 
         BufferedOutputStream fos = new BufferedOutputStream(new FileOutputStream(path));
